# openclaw-governance

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SUPPORTERS.md
.github/: FUNDING.yml
backend/: openclaw_flow.py
backend/abundance-protocols/: regenerative_economics.py
backend/aethel-grid/: Cargo.toml
backend/aethel-grid/kernel/src/: aethel_safety_kernel.rs
backend/backend/love-quality/: love_quality_engine.py
backend/backend/love-quality/backend/colony-agents/orchestrator/: colony_coordinator.py
backend/love-quality/: requirements.txt
docs/: COLONY-AUTOMATED-EXECUTION.md  COLONY-MIND-MERGE-SESSION-001.md  COLONY-MIND-MERGE-SESSION-004.md  COLONY-MIND-MERGE-SESSION-005.md  GATE-STEWARD-PROGRAM.md  GLOBAL-COORDINATION-PROTOCOLS.md  OPENCLAW-COLONY-AGENT-BEHAVIOR-PROFILES.md  OPENCLAW-COLONY-ARTICULA-CALCULA-SPECTRA.md  OPENCLAW-COLONY-COMMUNITY-BRIEF.md  OPENCLAW-COLONY-FINAL-STATUS-REPORT.md  OPENCLAW-COLONY-FINANCIAL-MODEL.md  OPENCLAW-COLONY-FULL-SYSTEM-REPORT.md  OPENCLAW-COLONY-MASTER-INTEGRATION-REFERENCE.md  OPENCLAW-COLONY-SYSTEM-AUDIT-REPORT.md  THE-NEW-FLOW-COMMUNITY-ACTIVATION.md  VOL-VEC-WOW-DEPLOYMENT.md  index.html
docs/colony/: BEACON.md  CALL.md  EXPLAINER.md  ORIGIN.md  ROLLOUT.md  STEWARDSHIP.md
docs/preston-fresco/: BILL-OF-MATERIALS.md
docs/wolfkrow/: WOLFKROW-CREWS-RECRUITMENT.md
localization/ar/: common.json
localization/en/: common.json
localization/es/: common.json
localization/fr/: common.json
localization/zh/: common.json
(+4 files in other folders)
