[workspace]
members = [
    "kernel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["iAAi33iAAi <jdtp717@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/iAAi33iAAi/openclaw-governance"
description = "Aethel Grid — Rust sovereignty safety kernel for OpenClaw Governance"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
